--- a/views/index.pug
+++ b/views/index.pug
@@ -2,25 +2,23 @@ extends layout
 
 block content
   .container 
-    .heading-section.mb-5
+    .heading-section
+      img(src="/images/home-heading.png")
       .heading-text
-        h1 Explore
-        p Take a tour to our store and find exotic tastes of coffee. Find yourself suitable coffee machine form world's best producers.
-      .circle1 
-      .circle2 
-      .circle3
+        h1 Welcome to ExpressShop
+        h5 ...literally
 
   .home-section
     .home-section-text.text-center
       h3.text-uppercase Check our special offers
-      p.text-muted Or contact us to get personalized offer and discounts.
+      p.text-muted Contact us to get personalized offer and discounts.
       .home-section-buttons 
         a.button-main(href="/special-offers") Check special offers 
         a.button-secondary(href="/special-offers") Contact us
 
     .home-section-cards.container
       .row 
-        .col-3 
+        .col-lg-3  
           .card
             .card-body
               h4.card-title Services
@@ -32,7 +30,7 @@ block content
                 | best practices and in short time, so you don't run 
                 | out of coffee!
               a.card-link(href='/services') Discover services
-        .col-3 
+        .col-lg-3 
           .card
             .card-body
               h4.card-title Premium machines
@@ -48,7 +46,7 @@ block content
                 br
                 | - Saeco
               a.card-link(href='/expresses') Explore machines
-        .col-3 
+        .col-lg-3
           .card
             .card-body
               h4.card-title Discounts
@@ -58,7 +56,7 @@ block content
                 | the most popular coffee types, so you better don't 
                 | miss this event!
               a.card-link(href='/special-offers') Check discounts
-        .col-3 
+        .col-lg-3
           .card
             .card-body
               h4.card-title Fast delivery
@@ -69,3 +67,17 @@ block content
                 | are unable to bring your machine to one of our service 
                 | points!
               a.card-link(href='/contact') Contact us now
+
+    footer.footer-main
+      .footer-logo ExpressShop
+      .footer-text.container
+        h5.text-uppercase.text-center Contact
+        .footer-adress
+          p 
+          | City: New York
+          br
+          | Adress: 1032 Westwood Avenue
+          br
+          | Phone: 516-858-8128
+          br
+          | E-mail: express-shop@gmail.com
