--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,5 +1,53 @@
 extends layout
 
 block content
-    footer 
-        p this is footer :)
+    .container-fluid.contact.mt-4
+        .container 
+            h1.text-uppercase.text-center Contact details 
+            hr
+            .contact-details
+                .row
+                    .col-lg-12.text-center.mb-2
+                        h4.map-header FIND YOUR POINT 
+                        img.map(src="/images/map.png")
+                    hr
+                .row
+                    .col-lg-3.contact-text.pb-2.mt-5
+                        p 
+                        | City: New York
+                        br
+                        | Adress: 1032 Westwood Avenue
+                        br
+                        | Phone: 516-858-8128
+                        br
+                        | E-mail: express-shop@gmail.com
+                    hr
+                    .col-lg-3.contact-text.pb-2
+                        p 
+                        | City: Warsaw
+                        br
+                        | Adress: Złota 40
+                        br
+                        | Phone: 575-858-813
+                        br
+                        | E-mail: express-shop@gmail.com
+                    hr
+                    .col-lg-3.contact-text.pb-2
+                        p 
+                        | City: London
+                        br
+                        | Adress: 321 Eastwood Avenue
+                        br
+                        | Phone: 4142-231-850
+                        br
+                        | E-mail: express-shop@gmail.com
+                    hr
+                    .col-lg-3.contact-text.pb-2
+                        p 
+                        | City: New Delhi
+                        br
+                        | Adress: Shawn Street
+                        br
+                        | Phone: 5514-890-21-09
+                        br
+                        | E-mail: express-shop@gmail.com
